Reference deb-substvars(5) instead of dpkg-substvars(5) in man pages.

--- a/man/dpkg-genchanges.1
+++ b/man/dpkg-genchanges.1
@@ -1,4 +1,4 @@
-.TH dpkg\-genchanges 1 "2007-03-07" "Debian Project" "dpkg utilities"
+.TH dpkg\-genchanges 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-genchanges \- generate Debian .changes files
 .
@@ -62,7 +62,7 @@ forces its exclusion and includes only the diff.
 .TP
 .BI \-V name = value
 Set an output substitution variable.
-See \fBdpkg\-substvars\fP(5) for a discussion of output substitution.
+See \fBdeb\-substvars\fP(5) for a discussion of output substitution.
 .TP
 .BI \-T substvarsfile
 Read substitution variables in
