--- a/man/dpkg-gencontrol.1
+++ b/man/dpkg-gencontrol.1
@@ -1,4 +1,4 @@
-.TH dpkg\-gencontrol 1 "2007-03-07" "Debian Project" "dpkg utilities"
+.TH dpkg\-gencontrol 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-gencontrol \- generate Debian control files
 .
@@ -19,7 +19,7 @@ it also adds an entry for the binary package to
 Sets the version number of the binary package which will be generated.
 .TP
 .BI \-V name = value
-Set an output substitution variable. See \fBdpkg-substvars\fP(5) for
+Set an output substitution variable. See \fBdeb\-substvars\fP(5) for
 discussion of output substitution.
 .TP
 .BI \-T substvarsfile
