--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -1,5 +1,5 @@
 .\" Authors: Ian Jackson
-.TH dpkg\-source 1 "2007-03-07" "Debian Project" "dpkg utilities"
+.TH dpkg\-source 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-source,
 \- Debian source package tools
@@ -87,7 +87,7 @@ defaults to the debian standard format.
 .TP
 .BI \-V name = value
 Set an output substitution variable.
-See \fBdpkg\-substvars\fP(5) for a discussion of output substitution.
+See \fBdeb\-substvars\fP(5) for a discussion of output substitution.
 .TP
 .BI \-T substvarsfile
 Read substitution variables in
