--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.14.5) UNRELEASED; urgency=low
     packages information. Closes: #428169, #428470
   * Add '.shelf' to the default dpkg-source -i regex. Closes: #427827
     Thanks to Adeodato Simó.
+  * Reference deb-substvars(5) instead of dpkg-substvars(5) in man pages.
 
   [ Updated dselect translations ]
   * French (Christian Perrier)
