--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-12  Guillem Jover  <guillem@debian.org>
+
+	* dpkg-source.1: Reference deb-substvars instead of dpkg-substvars.
+	* dpkg-genchanges.1: Likewise.
+	* dpkg-gencontrol.1: Likewise.
+
 2007-06-09  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1019t16f247u.
