Mark dpkg-* commands in bold in man pages.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,12 @@
 2007-06-12  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-divert.8: Mark dpkg-* commands in bold.
+	* dpkg-buildpackage.1: Likewise.
+	* dpkg-source.1: Likewise.
+	* dpkg-statoverride.8: Likewise.
+
+2007-06-12  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-source.1: Reference deb-substvars instead of dpkg-substvars.
 	* dpkg-genchanges.1: Likewise.
 	* dpkg-gencontrol.1: Likewise.
