--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -1,4 +1,4 @@
-.TH dpkg\-buildpackage 1 "2007-03-07" "Debian Project" "dpkg utilities"
+.TH dpkg\-buildpackage 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-buildpackage \- build source packages
 .
@@ -77,7 +77,7 @@ Check build dependencies and conflicts; abort if unsatisfied.
 Do not check build dependencies and conflicts.
 .TP
 .BI \-W
-Turn certain errors into warnings. Only dpkg\-source uses this, but
+Turn certain errors into warnings. Only \fBdpkg\-source\fP uses this, but
 .BR dpkg\-buildpackage
 recognizes it, and passes it thru to
 .BR dpkg\-source "."
@@ -85,7 +85,7 @@ recognizes it, and passes it thru to
 .BI \-E
 Negates a previously set
 .BR \-W "."
-Only dpkg\-source uses this, but
+Only \fBdpkg\-source\fP uses this, but
 .BR dpkg\-buildpackage
 recognizes it, and passes it thru to
 .BR dpkg\-source "."
