--- a/man/dpkg-statoverride.8
+++ b/man/dpkg-statoverride.8
@@ -1,4 +1,4 @@
-.TH dpkg\-statoverride 8 "2007-03-06" "Debian project" "dpkg utilities"
+.TH dpkg\-statoverride 8 "2007-06-12" "Debian project" "dpkg utilities"
 .SH NAME
 dpkg\-statoverride - override ownership and mode of files
 .
@@ -72,7 +72,7 @@ File which contains the current list of stat overrides of the system. It
 is located in the dpkg administration directory, along with other files
 important to dpkg, such as `status' or `available'.
 .br
-Note: dpkg\-statoverride preserves the old copy of this file, with
+Note: \fBdpkg\-statoverride\fP preserves the old copy of this file, with
 extension "\-old", before replacing it with the new one.
 .
 .SH SEE ALSO
