Man pages cleanup: - Unify title header.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,21 @@
 2007-06-12  Guillem Jover  <guillem@debian.org>
 
+	* deb-substvars.5: Unify title header.
+	* dpkg.1: Likewise.
+	* dpkg-buildpackage.1: Likewise.
+	* dpkg-checkbuilddeps.1: Likewise.
+	* dpkg-deb.1: Likewise.
+	* dpkg-divert.8: Likewise.
+	* dpkg-scanpackages.1: Likewise.
+	* dpkg-scansources.1: Likewise.
+	* dpkg-shlibdeps.1: Likewise.
+	* dpkg-source.1: Likewise.
+	* dpkg-statoverride.8: Likewise.
+	* install-info.8: Likewise.
+	* update-alternatives.8: Likewise.
+
+2007-06-12  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-divert.8: Mark dpkg-* commands in bold.
 	* dpkg-buildpackage.1: Likewise.
 	* dpkg-source.1: Likewise.
