--- a/man/dpkg-buildpackage.1
+++ b/man/dpkg-buildpackage.1
@@ -1,6 +1,6 @@
 .TH dpkg\-buildpackage 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-dpkg\-buildpackage \- build source packages
+dpkg\-buildpackage \- build binary or source packages from sources
 .
 .SH SYNOPSIS
 .B dpkg\-buildpackage
