--- a/man/dpkg-checkbuilddeps.1
+++ b/man/dpkg-checkbuilddeps.1
@@ -1,6 +1,6 @@
-.TH dpkg\-checkbuilddeps 1 "2007-03-06" "Debian Project" "dpkg utilities"
+.TH dpkg\-checkbuilddeps 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-dpkg\-checkbuilddeps - check build dependencies and conflicts
+dpkg\-checkbuilddeps \- check build dependencies and conflicts
 .
 .SH SYNOPSIS
 .B dpkg\-checkbuilddeps
