--- a/man/dpkg-scansources.1
+++ b/man/dpkg-scansources.1
@@ -1,6 +1,6 @@
-.TH dpkg\-scansources 1 "2007-03-06" "Debian Project" "dpkg utilities"
+.TH dpkg\-scansources 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-dpkg\-scansources \- search for '.dsc' files and build the 'Sources' index
+dpkg\-scansources \- create Sources index files
 .
 .SH SYNOPSIS
 .B dpkg\-scansources
