--- a/man/dpkg-shlibdeps.1
+++ b/man/dpkg-shlibdeps.1
@@ -1,6 +1,6 @@
-.TH dpkg\-shlibdeps 1 "2007-03-07" "Debian Project" "dpkg utilities"
+.TH dpkg\-shlibdeps 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-dpkg\-shlibdeps
+dpkg\-shlibdeps \- generate shared library substvar dependencies
 .
 .SH SYNOPSIS
 .B dpkg\-shlibdeps
