--- a/man/dpkg-statoverride.8
+++ b/man/dpkg-statoverride.8
@@ -1,6 +1,6 @@
 .TH dpkg\-statoverride 8 "2007-06-12" "Debian project" "dpkg utilities"
 .SH NAME
-dpkg\-statoverride - override ownership and mode of files
+dpkg\-statoverride \- override ownership and mode of files
 .
 .SH SYNOPSIS
 .B dpkg\-statoverride
