--- a/man/dpkg.1
+++ b/man/dpkg.1
@@ -1,6 +1,6 @@
-.TH dpkg 1 "2006-04-09" "Debian Project" "dpkg suite"
+.TH dpkg 1 "2007-06-12" "Debian Project" "dpkg suite"
 .SH NAME
-dpkg - package manager for Debian
+dpkg \- package manager for Debian
 .
 .SH SYNOPSIS
 .B dpkg
