--- a/man/install-info.8
+++ b/man/install-info.8
@@ -2,9 +2,9 @@
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
-.TH install\-info 8 "2007-05-15" "Debian Project" "dpkg utilities"
+.TH install\-info 8 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-install\-info - create or update entry in Info dir file
+install\-info \- create or update entry in Info dir file
 .
 .SH SYNOPSIS
 .B install\-info
