--- a/man/update-alternatives.8
+++ b/man/update-alternatives.8
@@ -5,9 +5,9 @@
 .\" by the Free Software Foundation; either version 2 of the License, or
 .\" (at your option) any later version.  There is NO WARRANTY.  You can
 .\" find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
-.TH update\-alternatives 8 "2007-03-06" "Debian Project" "dpkg utilities"
+.TH update\-alternatives 8 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-update\-alternatives - maintain symbolic links determining default commands
+update\-alternatives \- maintain symbolic links determining default commands
 .
 .SH SYNOPSIS
 .B update\-alternatives
