--- a/man/deb-substvars.5
+++ b/man/deb-substvars.5
@@ -1,8 +1,7 @@
 .\" Authors: Ian Jackson
-.TH deb\-substvars 5 "2007-05-12" "Debian Project" "dpkg utilities"
+.TH deb\-substvars 5 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-deb\-substvars
-\- Debian source substitution variables
+deb\-substvars \- Debian source substitution variables
 .
 .SH SYNOPSIS
 substvars
