--- a/man/dpkg-deb.1
+++ b/man/dpkg-deb.1
@@ -1,6 +1,6 @@
-.TH dpkg\-deb 1 "2007-03-13" "Debian Project" "dpkg suite"
+.TH dpkg\-deb 1 "2007-06-12" "Debian Project" "dpkg suite"
 .SH NAME
-dpkg\-deb - Debian package archive (.deb) manipulation tool
+dpkg\-deb \- Debian package archive (.deb) manipulation tool
 .
 .SH SYNOPSIS
 .B dpkg\-deb
