--- a/man/dpkg-scanpackages.1
+++ b/man/dpkg-scanpackages.1
@@ -13,9 +13,9 @@
 .\" You should have received a copy of the GNU General Public
 .\" License along with dpkg; if not, write to the Free Software
 .\" Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-.TH dpkg\-scanpackages 1 "2007-03-06" "Debian Project" "dpkg utilities"
+.TH dpkg\-scanpackages 1 "2007-06-12" "Debian Project" "dpkg utilities"
 .SH NAME
-dpkg\-scanpackages - create Packages files
+dpkg\-scanpackages \- create Packages index files
 .
 .SH SYNOPSIS
 .B dpkg\-scanpackages
