- Remove an additional space in install-info(8) and mark gzip in bold   and remove redundant reference to GNU. - Fix explanation of dpkg-source '-b' option, remove a reference to   checking for a missing empty string argument, and add a reference   to '-sX' arguments affecting the behaviour. Closes: #428167

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,13 @@
 2007-06-12  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-source.1: Fix explanation of '-b' option, remove a reference
+	to checking for a missing empty string argument, and add a reference
+	to '-sX' arguments affecting the behaviour.
+	* install-info.8: Remove an additional space. Mark gzip in bold and
+	remove redundant reference to GNU.
+
+2007-06-12  Guillem Jover  <guillem@debian.org>
+
 	* deb-substvars.5: Unify title header.
 	* dpkg.1: Likewise.
 	* dpkg-buildpackage.1: Likewise.
