--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -54,8 +54,7 @@ will look for the original source tarfile
 .IB package _ upstream-version .orig.tar.gz
 or the original source directory
 .IB directory .orig
-or the empty string (no original source, and so no diff) depending on
-the arguments.
+depending on the \fB\-sX\fP arguments.
 .TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
