--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,11 @@ dpkg (1.14.5) UNRELEASED; urgency=low
     - Reference deb-substvars(5) instead of dpkg-substvars(5).
     - Mark dpkg-* commands in bold.
     - Unify title header.
+    - Remove an additional space in install-info(8) and mark gzip in bold
+      and remove redundant reference to GNU.
+    - Fix explanation of dpkg-source '-b' option, remove a reference to
+      checking for a missing empty string argument, and add a reference
+      to '-sX' arguments affecting the behaviour. Closes: #428167
 
   [ Updated dselect translations ]
   * French (Christian Perrier)
