Support a colon separated list of paths from the ELF RPATH field in dpkg-shlibdeps. Thanks to Jiří Paleček. Closes: #427988

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-12  Jiří Paleček  <jpalecek@web.de>
+
+	* dpkg-shlibdeps.pl: Support colon separated list of paths in the
+	ELF RPATH field.
+
 2007-06-12  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-scanpackages.pl: Move check for existence of $override
