--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ dpkg (1.14.5) UNRELEASED; urgency=low
     packages information. Closes: #428169, #428470
   * Add '.shelf' to the default dpkg-source -i regex. Closes: #427827
     Thanks to Adeodato Simó.
+  * Support a colon separated list of paths from the ELF RPATH field in
+    dpkg-shlibdeps. Thanks to Jiří Paleček. Closes: #427988
   * Man pages cleanup:
     - Reference deb-substvars(5) instead of dpkg-substvars(5).
     - Mark dpkg-* commands in bold.
