--- a/debian/changelog
+++ b/debian/changelog
@@ -22,10 +22,12 @@ dpkg (1.14.5) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * French (Christian Perrier)
-  
+  * Romanian - converted to use correct diacritics
+
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
   * Estonian (Ivar Smolin). Closes: #427589
+  * Romanian - converted to use correct diacritics
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
