--- a/debian/changelog
+++ b/debian/changelog
@@ -27,7 +27,7 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
   * Estonian (Ivar Smolin). Closes: #427589
-  * Romanian - converted to use correct diacritics
+  * Romanian - updated and converted to use correct diacritics
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
