updated Romanian translation of dselect to 283t2f

--- a/dselect/po/ro.po
+++ b/dselect/po/ro.po
@@ -1,3 +1,4 @@
+# translation of ro.po to Romanian
 # Romanian translations for the dpkg package.
 # This file is distributed under the same license as the dpkg package.
 #
@@ -11,22 +12,21 @@
 # Copyright (C) 2005 THE PACKAGE'S COPYRIGHT HOLDER
 #
 # Rușeț Zeno <rzeno@cwazy.co.uk>, 2005.
-# Eddy Petrișor <eddy.petrisor@gmail.com>, 2005, 2006.
+# Eddy Petrișor <eddy.petrisor@gmail.com>, 2005, 2006, 2007.
 # Sorin Batariuc <sorin@bonbon.net>, 2005.
 msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-05-08 04:15+0300\n"
-"PO-Revision-Date: 2006-05-16 00:34+0300\n"
+"PO-Revision-Date: 2007-06-12 12:39+0300\n"
 "Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3;plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?"
-"2:1))\n"
-"X-Generator: KBabel 1.11.2\n"
+"Plural-Forms:  nplurals=3; plural=n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < 20)) ? 1 : 2;\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #  spațiile sunt necesare!!
 #: dselect/basecmds.cc:121
@@ -154,9 +154,8 @@ msgstr ""
 "\n"
 
 #: dselect/baselist.cc:259
-#, fuzzy
 msgid "Keybindings"
-msgstr "asignari taste"
+msgstr "Combinații de taste"
 
 #: dselect/baselist.cc:307
 #, c-format
@@ -1084,9 +1083,8 @@ msgid "[none]"
 msgstr "[niciuna]"
 
 #: dselect/methlist.cc:191
-#, fuzzy
 msgid "Explanation"
-msgstr "explicație la "
+msgstr "Explicație"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
@@ -1135,8 +1133,7 @@ msgstr "nu pot aștepta după %.250s"
 #: dselect/method.cc:175
 #, c-format
 msgid "got wrong child's status - asked for %ld, got %ld"
-msgstr ""
-"am recepționat o stare greșită a procesului-fiu - cerut %ld, recepționat %ld"
+msgstr "am recepționat o stare greșită a procesului-fiu - cerut %ld, recepționat %ld"
 
 #: dselect/method.cc:186
 #, c-format
@@ -1422,7 +1419,7 @@ msgstr "ante-dependență de"
 
 #: dselect/pkgdisplay.cc:75
 msgid "breaks with"
-msgstr ""
+msgstr "se corupe cu"
 
 #: dselect/pkgdisplay.cc:76
 msgid "conflicts with"
@@ -1637,24 +1634,20 @@ msgstr ""
 "posibilitatea să marcați pachetele în diferite moduri de grupare."
 
 #: dselect/pkginfo.cc:95
-#, fuzzy
 msgid "Interrelationships"
-msgstr "relații interne"
+msgstr "Inter-relații"
 
 #: dselect/pkginfo.cc:112
-#, fuzzy
 msgid "No description available."
-msgstr "nici o descriere disponibilă."
+msgstr "Nici o descriere disponibilă."
 
 #: dselect/pkginfo.cc:130
-#, fuzzy
 msgid "Installed control file information"
-msgstr "informația de control instalată pentru "
+msgstr "Informația de control instalată"
 
 #: dselect/pkginfo.cc:146
-#, fuzzy
 msgid "Available control file information"
-msgstr "versiune disponibilă a informației de control a fișierelor"
+msgstr "Informația de control disponibilă"
 
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
 msgid "<null>"
@@ -1768,3 +1761,4 @@ msgstr "Ver.disp"
 
 #~ msgid "available version of control info for "
 #~ msgstr "versiune disponibilă a informației de control pentru"
+
