--- a/debian/changelog
+++ b/debian/changelog
@@ -22,7 +22,7 @@ dpkg (1.14.5) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * French (Christian Perrier)
-  * Romanian - converted to use correct diacritics
+  * Romanian - updated and converted to use correct diacritics
 
   [ Updated dpkg translations ]
   * Portuguese (Miguel Figueiredo).
