--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ dpkg (1.14.5) UNRELEASED; urgency=low
     - Fix explanation of dpkg-source '-b' option, remove a reference to
       checking for a missing empty string argument, and add a reference
       to '-sX' arguments affecting the behaviour. Closes: #428167
+    - Remove documented dpkg-gencontrol options in dpkg-source left over
+      from the man pages split.
 
   [ Updated dselect translations ]
   * French (Christian Perrier)
