Close bug reported after fix was committed. (For "Reference deb-substvars(5) instead of dpkg-substvars(5)")

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   * Support a colon separated list of paths from the ELF RPATH field in
     dpkg-shlibdeps. Thanks to Jiří Paleček. Closes: #427988
   * Man pages cleanup:
-    - Reference deb-substvars(5) instead of dpkg-substvars(5).
+    - Reference deb-substvars(5) instead of dpkg-substvars(5). Closes: #429182
     - Mark dpkg-* commands in bold.
     - Unify title header.
     - Remove an additional space in install-info(8) and mark gzip in bold
