--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,7 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   * Portuguese (Miguel Figueiredo).
   * Estonian (Ivar Smolin). Closes: #427589
   * Romanian - updated and converted to use correct diacritics
+  * Spanish (Javier Fernandez-Sanguino). Closes: #429958
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
