Fix typo in German translation of start-stop-daemon(8). Noted by Joachim Breitner. Closes: #430008

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -9564,7 +9564,7 @@ msgid ""
 "With B<--start>, start the process specified by I<pathname>.  If not "
 "specified, defaults to the argument given to B<--exec>."
 msgstr ""
-"Mit B<--start> wir der über I<Pfadname> spezifizierte Prozess gestartet. "
+"Mit B<--start> wird der über I<Pfadname> spezifizierte Prozess gestartet. "
 "Falls nicht angegeben, werden standardmäßig die an B<--exec> übergebenen "
 "Argumente verwendet."
 
