--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,10 @@ dpkg (1.14.5) UNRELEASED; urgency=low
   [ Frank Lichtenheld ]
   * Fix typo in German translation of start-stop-daemon(8).
     Noted by Joachim Breitner. Closes: #430008
+  * Correct permission and owner/group handling when extracting
+    tar balls to match more the user's preferences instead of
+    ours or the ones from the originator of the tar ball. Patch
+    by Ian Jackson. Closes: #390915, #207289
   
   [ Updated dselect translations ]
   * French (Christian Perrier)
