Synchronise COPYING with /usr/share/common-licenses/GPL-2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-02  Frank Lichtenheld  <djpig@debian.org>
+
+	* COPYING: Update to current version of GPL v2
+	text. Updates FSF address and LGPL name.
+
 2007-07-01  Frank Lichtenheld  <djpig@debian.org>
 
 	* scripts/dpkg-source.pl: Warn that newly created empty files are
