--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-03  Frank Lichtenheld  <djpig@debian.org>
+
+	* configure.ac: Release 1.14.5.
+
 2007-07-02  Frank Lichtenheld  <djpig@debian.org>
 
 	* COPYING: Update to current version of GPL v2
