--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.5) UNRELEASED; urgency=low
+dpkg (1.14.5) unstable; urgency=low
 
   [ Guillem Jover ]
   * Add lpia support to ostable and triplettable.
@@ -34,18 +34,18 @@ dpkg (1.14.5) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * French (Christian Perrier).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
 
   [ Updated dpkg translations ]
   * Estonian (Ivar Smolin). Closes: #427589
   * Portuguese (Miguel Figueiredo).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
   * Spanish (Javier Fernandez-Sanguino). Closes: #429958
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
 
- -- Frank Lichtenheld <djpig@debian.org>  Sat, 23 Jun 2007 11:27:55 +0200
+ -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 00:27:07 +0200
 
 dpkg (1.14.4) unstable; urgency=low
 
@@ -202,7 +202,7 @@ dpkg (1.14.0) unstable; urgency=low
   * Dutch (Bart Cornelis).
   * French (Frédéric Bothamy).
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
   * Simplified Chinese (Anthony Wong). Closes: #415320
   * Traditional Chinese (Anthony Wong). Closes: #415230
 
@@ -243,7 +243,7 @@ dpkg (1.13.25) unstable; urgency=low
   * Korean (Sunjae Park). Closes: #394135, #404938
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #391143
   * Nepali (Shiva Prasad Pokharel).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
   * Catalan (Jordà Polo).
   * Swedish (Peter Karlsson).
   * Vietnamese (Clytie Siddall). Closes: #399343
