--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.6) UNRELEASED; urgency=low
+
+  * 
+
+ -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 01:47:56 +0200
+
 dpkg (1.14.5) unstable; urgency=low
 
   [ Guillem Jover ]
