--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-04  Frank Lichtenheld  <djpig@debian.org>
+
+	* Makefile.am (uninstall-local): New target to
+	remove the translated man pages. Detected with
+	the help of 'make distcheck'.
+
 2007-07-02  Frank Lichtenheld  <djpig@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
