Gazillionth update of the French translation for scripts

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.6) UNRELEASED; urgency=low
 
-  * 
+  [ Updated scripts translations ]
+  * French (Frédéric Bothamy, Christian Perrier).
 
  -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 01:47:56 +0200
 
@@ -47,6 +48,7 @@ dpkg (1.14.5) unstable; urgency=low
   * Portuguese (Miguel Figueiredo).
   * Romanian (Eddy Petrişor).
   * Spanish (Javier Fernandez-Sanguino). Closes: #429958
+  * Dzongkha (Tshewang Norbu). Closes: #430931
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
