Really commit the Dzongkha translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   [ Updated scripts translations ]
   * French (Frédéric Bothamy, Christian Perrier).
 
+  [ Updated dpkg translations ]
+  * Dzongkha (Tshewang Norbu). Really Closes: #430931
+
  -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 01:47:56 +0200
 
 dpkg (1.14.5) unstable; urgency=low
