--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-28  Tshewang Norbu  <bumthap2006@hotmail.com>\
+
+	* dz.po: Updated to 921t.
+
 2007-06-21  Javier Fernandez-Sanguino  <jfs@debian.org>
 
 	* es.po: Updated to 921t.
