Update German man pages to 1061t1f219u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ dpkg (1.14.6) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Dzongkha (Tshewang Norbu). Really Closes: #430931
 
+  [ Updated man pages translations ]
+  * German (Helge Kreutzmann).
+
  -- Frank Lichtenheld <djpig@debian.org>  Tue, 03 Jul 2007 01:47:56 +0200
 
 dpkg (1.14.5) unstable; urgency=low
