--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-07-08  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1061t1f219u.
+
 2007-07-04  Frank Lichtenheld  <djpig@debian.org>
 
 	* Makefile.am (uninstall-local): New target to
