Synchronise usage information of dpkg, dpkg-deb, and dpkg-query man pages. This fixes some small mistakes and also Closes: #321520

--- a/man/dpkg-query.1
+++ b/man/dpkg-query.1
@@ -43,7 +43,7 @@ Report status of specified package. This just displays the entry in
 the installed package status database.
 .TP
 .BR \-L ", " \-\-listfiles " \fIpackage-name\fP ..."
-List files installed to your system from \fBpackage-name\fP.
+List files installed to your system from \fIpackage-name\fP.
 However, note that files created by package-specific
 installation-scripts are not listed.
 .TP
@@ -53,7 +53,7 @@ wildchars can be used in the pattern. This command will not list
 extra files created by maintainer scripts, nor will it list
 alternatives.
 .TP
-.BR \-p ", " \-\-print\-avail " \fIpackage-name\fP"
+.BR \-p ", " \-\-print\-avail " \fIpackage-name\fP ..."
 Display details about \fIpackage-name\fP, as found in
 \fI/var/lib/dpkg/available\fP.
 .TP
