--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2007-07-10  Frank Lichtenheld  <djpig@debian.org>
+
+	* dpkg.1, dpkg-query.1, dpkg-deb.1: Synchronise
+	usage information between these three man pages.
+	Also fix some formatting oddities and small
+	mistakes.
+
 2007-07-08  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1061t1f219u.
