--- a/man/dpkg-deb.1
+++ b/man/dpkg-deb.1
@@ -149,7 +149,7 @@ format. Together with
 .BR tar (1)
 this can be used to extract a particular file from a package archive.
 .TP
-.BR \-e ", " \-\-control " \fIarchive directory\fP"
+.BR \-e ", " \-\-control " \fIarchive\fP [\fIdirectory\fP]"
 Extracts the control information files from a package archive into the
 specified directory.
 
